make buttons invisible until slider is hovered on. Fix moveLeft button

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
   position: absolute;
   right: 0;
   top: calc(var(--slider-py) - 60px);
+  visibility: hidden;
 }
 .indicator {
   width: 15px;
@@ -156,6 +157,7 @@ body {
 .description__button:hover {
   border-color: grey;
   color: grey;
+  cursor: pointer;
 }
 
 .description__button:nth-of-type(5) {
@@ -180,6 +182,7 @@ body {
   color: white;
   top: var(--slider-py);
   z-index: 5;
+  visibility: hidden;
 }
 
 #moveLeft {
@@ -188,4 +191,9 @@ body {
 
 #moveRight {
   right: 0;
+}
+
+.container:hover .btn-nav,
+.container:hover .container-indicators {
+  visibility: visible;
 }
